# airflow-dags

./: .env-example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.adoc  app.py  docker-compose.override.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md  release-please-config.json
.github/workflows/: ci.yaml  pr-issues-project.yaml
dags/: feature_eng.py  feature_engineering_ubereats.py  github_repositories_dag.py  listen_to_the_stream.py  ml_pipeline_example.py  ml_pipeline_example_inline.py  monitoring_feature.py  predict.py  predict_model_ubereats.py  produce_consume_treats.py  s3_etl_business_dag_part_1.py  s3_etl_business_dag_part_2.py  temp_ingestion.py  train.py  train_model_ubereats.py  walking_my_pet.py
dags/modules/airflow-submodule-dags/: README.md
dags/spark/: bronze_to_silver.yaml  bronze_to_silver_dag.py  delivery_data_from_silver_to_gold_dag.py  example_kubernetes_operator_dag.py  ingestion_from_landing_data_file_to_bronze_tables_dag.py  pi.py  raw_to_bronze_dag.py  show_case_uber_eats.py  silver_to_gold_dag.py  transform_and_enrichment_from_bronze_to_silver_dag.py
dags/spark/jobs/: bronze_to_silver.py  data_processing_spark.py  ingestion_from_landing_data_file_to_bronze_tables.py  raw_to_bronze.py  show_case_uber_eats_bronze_ingestion.py  show_case_uber_eats_gold_dataset.py  show_case_uber_eats_silver_transformation.py  silver_to_gold.py  (+1 more)
dags/spark_dags/: bronze_to_silver_dag.py  ingestion_from_landing_data_file_to_bronze_tables_dag.py  raw_to_bronze_dag.py  silver_to_gold.yaml  silver_to_gold_dag.py
dags/spark_files/: bronze_to_silver.py  ingestion_to_bronze.py  raw_to_bronze.py  silver_to_gold.py
dags/spark_jobs/: delivery_data_from_silver_to_gold.yaml  ingestion_from_landing_data_file_to_bronze_tables.yaml  raw_to_bronze.yaml  transform_and_enrichment_from_bronze_to_silver.yaml
dags/src/: feature_engineer_common.py  s3_etl_business.py
dockerfiles/mlflow/: Dockerfile
dockerfiles/spark/: Dockerfile  dependencies.txt  download-jars.sh
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
plugins/: gcs_xcom_backend.py  magalu_operators.py
tests/dags/: test_dag.py
(+9 files in other folders)
